fix: CORS config updated